---------------------------------------------------------------------------
Version 5.8.11  [V5-stable] 2012-04-??
- bugfix: active input in "light delay state" could block rsyslog
  termination, at least for prolonged period of time
- bugfix: imptcp input name could not be set
  config directive was accepted, but had no effect
- bugfix: assigned ruleset was lost when using disk queues
  This looked quite hard to diagnose for disk-assisted queues, as the
  pure memory part worked well, but ruleset info was lost for messages
  stored inside the disk queue.
- bugfix: hostname was not requeried on HUP
  Thanks to Per Jessen for reporting this bug and Marius Tomaschewski for
  his help in testing the fix.
- bugfix: inside queue.c, some thread cancel states were not correctly
  reset. While this is a bug, we assume it did have no practical effect
  because the reset as it was done was set to the state the code actually
  had at this point. But better fix this...
---------------------------------------------------------------------------
Version 5.8.10  [V5-stable] 2012-04-05
- bugfix: segfault on startup if $actionqueuefilename was missing for disk
  queue config
  Thanks to Tomas Heinrich for the patch.
- bugfix: segfault if disk-queue was started up with old queue file
  Thanks to Tomas Heinrich for the patch.
- bugfix: memory leak in array passing output module mode
---------------------------------------------------------------------------
Version 5.8.9  [V5-stable] 2012-03-15
- added tool to recover disk queue if .qi file is missing (recover_qi.pl)
  Thanks to Kaiwang Chen for contributing this tool
- bugfix: stopped DA queue was never processed after a restart due to a
  regression from statistics module
- added better doc for statsobj interface
  Thanks to Kaiwang Chen for his suggestions and analysis in regard to the
  stats subsystem.
---------------------------------------------------------------------------
Version 5.8.8  [V5-stable] 2012-03-05